Fix z-index for server-index and server-show

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -213,6 +213,7 @@ p {
   background: transparent;
   overflow-x: hidden;
   pointer-events: none;
+  z-index: 2;
 }
 
 .server-index ul {
