--- a/app/assets/stylesheets/server-show.scss
+++ b/app/assets/stylesheets/server-show.scss
@@ -2,6 +2,7 @@
   display: flex;
   width: 100%;
   margin-left: 70px;
+  z-index: 1;
 }
 
 body {
